syntax = "proto3";
option go_package = "./";


service BlogService {
    rpc CreateBlog(CreateBlogReq) returns (CreateBlogRes);
    rpc ReadBlog(ReadBlogReq) returns (ReadBlogRes);
    rpc UpdateBlog(UpdateBlogReq) returns (UpdateBlogRes);
    rpc DeleteBlog(DeleteBlogReq) returns (DeleteBlogRes);
    rpc ListBlogs(ListBlogsRequest) returns (stream ListBlogsResponse);
}

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogReq {
    Blog blog = 1; // Blog is blank
}

message CreateBlogRes {
    Blog blog = 1; // Blog id filled in
}

message UpdateBlogReq {
    Blog blog = 1;
}

message UpdateBlogRes {
    Blog blog = 1;
}

message ReadBlogReq {
    Blog blog = 1;
}

message ReadBlogRes {
    Blog blog = 1;
}

message DeleteBlogReq {
    Blog blog = 1;
}

message DeleteBlogRes {
    Blog blog = 1;
}

message ListBlogsRequest {}

message ListBlogsResponse {
    Blog blog = 1;
}

// This din't work - protoc -I blogs blogs/blogs.proto --go-grpc_out=plugins=grpc:.
// Below 2 worked
// protoc -I blogs blogs/blogs.proto --go-grpc_out=blogs
// protoc -I blogs blogs/blogs.proto --go_out=blogs